--- a/design.ui
+++ b/design.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1074</width>
-    <height>631</height>
+    <width>1085</width>
+    <height>608</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>230</y>
+      <y>300</y>
       <width>271</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>210</y>
+      <y>280</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -96,7 +96,7 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>310</y>
+      <y>380</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -109,7 +109,7 @@
     <property name="geometry">
      <rect>
       <x>870</x>
-      <y>310</y>
+      <y>380</y>
       <width>191</width>
       <height>16</height>
      </rect>
@@ -132,9 +132,9 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>330</y>
+      <y>400</y>
       <width>271</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -144,9 +144,9 @@
    <widget class="QPushButton" name="btnNextMethod">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>0</y>
-      <width>161</width>
+      <x>10</x>
+      <y>280</y>
+      <width>121</width>
       <height>23</height>
      </rect>
     </property>
@@ -157,9 +157,9 @@
    <widget class="QPushButton" name="btnPrevMethod">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>0</y>
-      <width>161</width>
+      <x>10</x>
+      <y>300</y>
+      <width>121</width>
       <height>23</height>
      </rect>
     </property>
@@ -170,9 +170,9 @@
    <widget class="QPushButton" name="btnDelThisMethod">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>30</y>
-      <width>141</width>
+      <x>610</x>
+      <y>260</y>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -183,9 +183,9 @@
    <widget class="QPushButton" name="btnDelAllMethod">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>0</y>
-      <width>141</width>
+      <x>610</x>
+      <y>290</y>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -196,9 +196,9 @@
    <widget class="QPushButton" name="btnSaveThisMethod">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>0</y>
-      <width>141</width>
+      <x>440</x>
+      <y>260</y>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -209,9 +209,9 @@
    <widget class="QPushButton" name="btnSaveAllMethod">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>30</y>
-      <width>141</width>
+      <x>440</x>
+      <y>290</y>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -219,25 +219,12 @@
      <string>Сохранить все методы</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>20</y>
-      <width>47</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Метод:</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="lblNextMethod">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>20</y>
-      <width>101</width>
+      <x>140</x>
+      <y>280</y>
+      <width>121</width>
       <height>16</height>
      </rect>
     </property>
@@ -245,25 +232,12 @@
      <string>NO</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_10">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>20</y>
-      <width>47</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Метод:</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="lblPrevMethod">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>20</y>
-      <width>101</width>
+      <x>140</x>
+      <y>300</y>
+      <width>121</width>
       <height>16</height>
      </rect>
     </property>
@@ -274,8 +248,8 @@
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>0</y>
+      <x>50</x>
+      <y>260</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -287,9 +261,9 @@
    <widget class="QLabel" name="lblThisMethod">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>91</width>
+      <x>140</x>
+      <y>260</y>
+      <width>121</width>
       <height>16</height>
      </rect>
     </property>
@@ -301,8 +275,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>40</y>
-      <width>191</width>
+      <y>320</y>
+      <width>251</width>
       <height>23</height>
      </rect>
     </property>
@@ -313,35 +287,35 @@
    <widget class="QPushButton" name="btnSaveTest">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>40</y>
-      <width>211</width>
-      <height>23</height>
+      <x>270</x>
+      <y>260</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Сохранить результат</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnSaveResByte">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>290</y>
+      <width>161</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Сохранить тест</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnSaveResByte">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>60</y>
-      <width>211</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Сохранить результат в тест</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="btnCalcTo">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
-      <width>131</width>
+      <y>340</y>
+      <width>171</width>
       <height>23</height>
      </rect>
     </property>
@@ -352,9 +326,9 @@
    <widget class="QSpinBox" name="spnToMethod">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>60</y>
-      <width>61</width>
+      <x>180</x>
+      <y>340</y>
+      <width>81</width>
       <height>22</height>
      </rect>
     </property>
@@ -366,7 +340,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>90</y>
+      <y>10</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -379,7 +353,7 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>90</y>
+      <y>10</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -391,8 +365,8 @@
    <widget class="QPushButton" name="btnExit">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>330</y>
+      <x>1000</x>
+      <y>540</y>
       <width>71</width>
       <height>23</height>
      </rect>
@@ -404,8 +378,8 @@
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>330</y>
+      <x>790</x>
+      <y>440</y>
       <width>201</width>
       <height>21</height>
      </rect>
@@ -417,18 +391,30 @@
    <widget class="QLCDNumber" name="lcdNumber">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>330</y>
-      <width>61</width>
+      <x>980</x>
+      <y>440</y>
+      <width>81</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Nirmala UI Semilight</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="smallDecimalPoint">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>330</y>
+      <x>790</x>
+      <y>460</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -440,9 +426,9 @@
    <widget class="QLabel" name="lblMsg">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>330</y>
-      <width>341</width>
+      <x>860</x>
+      <y>460</y>
+      <width>201</width>
       <height>16</height>
      </rect>
     </property>
@@ -454,7 +440,7 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>160</y>
+      <y>200</y>
       <width>271</width>
       <height>31</height>
      </rect>
@@ -476,10 +462,10 @@
    <widget class="QPushButton" name="btnLoadMethods">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>60</y>
-      <width>291</width>
-      <height>21</height>
+      <x>440</x>
+      <y>330</y>
+      <width>161</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -490,7 +476,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>110</y>
+      <y>30</y>
       <width>251</width>
       <height>221</height>
      </rect>
@@ -500,8 +486,8 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>110</y>
-      <width>491</width>
+      <y>30</y>
+      <width>501</width>
       <height>221</height>
      </rect>
     </property>
@@ -510,9 +496,9 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>280</y>
+      <y>350</y>
       <width>271</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -523,7 +509,7 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>260</y>
+      <y>330</y>
       <width>111</width>
       <height>16</height>
      </rect>
@@ -536,8 +522,8 @@
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>260</y>
-      <width>101</width>
+      <y>280</y>
+      <width>161</width>
       <height>16</height>
      </rect>
     </property>
@@ -603,7 +589,7 @@
       <x>790</x>
       <y>110</y>
       <width>211</width>
-      <height>16</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -623,19 +609,6 @@
      <string>Ожидание после запуска:</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spnCountRowEnd">
-    <property name="geometry">
-     <rect>
-      <x>1020</x>
-      <y>130</y>
-      <width>41</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="maximum">
-     <number>999999999</number>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_17">
     <property name="geometry">
      <rect>
@@ -649,37 +622,11 @@
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Байты проверки (с последним)&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spnCountRowStart">
-    <property name="geometry">
-     <rect>
-      <x>960</x>
-      <y>130</y>
-      <width>41</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="maximum">
-     <number>999999999</number>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_18">
-    <property name="geometry">
-     <rect>
-      <x>1000</x>
-      <y>130</y>
-      <width>16</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>   -</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="lblResFile_2">
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>260</y>
+      <y>330</y>
       <width>161</width>
       <height>16</height>
      </rect>
@@ -692,9 +639,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>360</y>
-      <width>541</width>
-      <height>221</height>
+      <y>370</y>
+      <width>651</width>
+      <height>191</height>
      </rect>
     </property>
     <column>
@@ -714,7 +661,7 @@
     </column>
     <column>
      <property name="text">
-      <string>Убрать</string>
+      <string>Начальное</string>
      </property>
     </column>
     <column>
@@ -722,14 +669,19 @@
       <string>Поиск по адресу</string>
      </property>
     </column>
+    <column>
+     <property name="text">
+      <string>Убрать</string>
+     </property>
+    </column>
    </widget>
    <widget class="QPushButton" name="btnAddStrEditTest">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>360</y>
+      <x>680</x>
+      <y>370</y>
       <width>91</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -739,10 +691,10 @@
    <widget class="QProgressBar" name="prgExec">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>380</y>
-      <width>411</width>
-      <height>23</height>
+      <x>790</x>
+      <y>510</y>
+      <width>281</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="value">
@@ -752,10 +704,10 @@
    <widget class="QPushButton" name="btnChgAll">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>380</y>
+      <x>680</x>
+      <y>410</y>
       <width>91</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -765,8 +717,8 @@
    <widget class="QLabel" name="label_19">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>360</y>
+      <x>790</x>
+      <y>480</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -778,9 +730,9 @@
    <widget class="QLabel" name="lblExecuteProc">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>360</y>
-      <width>341</width>
+      <x>860</x>
+      <y>480</y>
+      <width>201</width>
       <height>16</height>
      </rect>
     </property>
@@ -791,10 +743,10 @@
    <widget class="QPushButton" name="btnOpenInputData">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>90</y>
+      <x>110</x>
+      <y>10</y>
       <width>81</width>
-      <height>23</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -804,10 +756,10 @@
    <widget class="QPushButton" name="btnOpenResData">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>90</y>
+      <x>380</x>
+      <y>10</y>
       <width>81</width>
-      <height>23</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -818,7 +770,7 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>190</y>
+      <y>250</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -830,10 +782,10 @@
    <widget class="QPushButton" name="btnClearChgAll">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>400</y>
+      <x>680</x>
+      <y>490</y>
       <width>91</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -843,14 +795,73 @@
    <widget class="QPushButton" name="btnFindChgAll">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>420</y>
+      <x>680</x>
+      <y>530</y>
       <width>91</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Найти все</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnStartAll">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>450</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Начальное все</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblStartAllPos">
+    <property name="geometry">
+     <rect>
+      <x>785</x>
+      <y>150</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>  с | ,позиции перебора</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>170</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string> по | кол-во перебора</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="txtPosStart">
+    <property name="geometry">
+     <rect>
+      <x>910</x>
+      <y>150</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="txtPosEnd">
+    <property name="geometry">
+     <rect>
+      <x>910</x>
+      <y>170</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -859,7 +870,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1074</width>
+     <width>1085</width>
      <height>21</height>
     </rect>
    </property>
